task5/deploy/pay-service/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: payservice
  name: payservice
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payservice
  template:
    metadata:
      labels:
        app: payservice
    spec:
      containers:
        - image: gm-payservice:v1
          name: payservice
          resources:
            requests:
              cpu: "500m"
              memory: "512Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
