task5/deploy/pay-service/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: payservice-ingress
spec:
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: payservice
                port:
                  number: 8083
